--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -86,6 +86,10 @@ dt {
   letter-spacing: 0.02em;
   margin-top: 30px;
   font-weight: 600;
+
+  &:first-child {
+    margin-top: 0;
+  }
 }
 
 dd {
@@ -104,13 +108,17 @@ dd {
 }
 
 dl#question {
-  display: block;
-  width: 260px;
-  position: absolute;
+  float: left;
+  width: 45%;
 }
 
 dl#info {
-  margin-left: 400px;
+  float: right;
+  width: 45%;
+}
+
+dl#other {
+  clear: both;
 }
 
 .tooltip {
